# coal-price-prediction

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  generate_data_gap_audit.py  generate_paper_tables.py  render.yaml  requirements.txt  train.py
.github/workflows/: sync-to-hf-space.yml
config/: data_contract.json  text_sources.json
configs/app/: prod.yaml  staging.yaml
configs/cpp/: signal_engine.yaml
configs/model/: ensemble.yaml  monthly_lightgbm.yaml  yearly_svr.yaml
core/: README.md  app.py  requirements.txt  train.py  预测数据.xlsx
core/config/: public_data_sources.json
core/cpp_core/: CMakeLists.txt
core/cpp_core/bindings/: pybind_module.cpp
core/cpp_core/include/: feature_engine.hpp  risk_engine.hpp  signal_engine.hpp
core/cpp_core/src/: risk_engine.cpp  signal_engine.cpp
core/docs/: directory_tree_industrial.md  models_technical.md  煤价预测系统技术总文档.md  统一技术基线文档.md  计划书对齐差距清单.md  项目协作与任务分发说明文档.md  项目技术盘点与任务分发文档.md
core/schemas/: events.schema.json  feature_frame.schema.json  market_data.schema.json  prediction.schema.json
core/src/: backtest.py  cpp_bridge.py  data.py  data_contract.py  features.py  ingestion.py  models.py  nlp_index.py  pipeline.py  public_sources.py  reporting.py  runtime_config.py  text_sources.py
cpp_core/include/: io_bridge.hpp
cpp_core/src/: feature_engine.cpp  (+1 more)
docs/: directory_tree_industrial.md
python/: __init__.py
scripts/: migrate_data_layout.py
src/: backtest.py  data_audit.py  features.py  ingestion.py  models.py  nlp_index.py  pipeline.py  reporting.py
templates/: index.html
(+24 files in other folders)
